--- a/sdk/dotnet/DSIO.Modality.Api.Sdk.Types/DSIO.Modality.Api.Sdk.Types.csproj
+++ b/sdk/dotnet/DSIO.Modality.Api.Sdk.Types/DSIO.Modality.Api.Sdk.Types.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\bin\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\bin\</OutputPath>
+  </PropertyGroup>
+
 </Project>
