--- a/sdk/dotnet/lib/DSIO.Modality.Api.Sdk.Client/DSIO.Modality.Api.Sdk.Client.csproj
+++ b/sdk/dotnet/lib/DSIO.Modality.Api.Sdk.Client/DSIO.Modality.Api.Sdk.Client.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
