--- a/sdk/dotnet/samples/WpfSample/WpfSample.csproj
+++ b/sdk/dotnet/samples/WpfSample/WpfSample.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\lib\DSIO.Modality.Api.Sdk.Client\DSIO.Modality.Api.Sdk.Client.csproj" />
+    <ProjectReference Include="..\..\lib\DSIO.Modality.Api.Sdk.Types\DSIO.Modality.Api.Sdk.Types.csproj" />
+  </ItemGroup>
+
 </Project>
