--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Build
-      run: build.ps1
-      working-directory: sdk/dotnet
+      shell: powershell
+      run: .\build.ps1
+      working-directory: sdk\dotnet
 
