Upload artifacts from build

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        fetch-depth: 0
+        fetch-depth: 0  # We need tags for the build script
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -24,4 +24,9 @@ jobs:
       shell: powershell
       run: .\build.ps1
       working-directory: sdk\dotnet
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dotnet-sdk-nugets
+        path: sdk/dotnet/lib/bin
 
